--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,38 @@
 :root {
 	--brand-color: #9b948a;
+	--black-color: #000000;
+	--white-color: #ffffff;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+a {
+	color: var(--white-color);
+}
+
+a:hover {
+	text-decoration: none;
+}
+br {
+	line-height: 0.5;
+}
+
+ul {
+	list-style-type: none;
+	list-style-position: inside;
+	list-style: none;
+	margin-left: -24px;
+}
+
+ul > li {
+	display: inline-block;
+	margin-left: -16px;
+}
+
+ul > li:not(:first-child) {
+	margin-left: 16px;
 }
 
 @font-face {
@@ -21,4 +50,45 @@
 body {
 	font-family: "Clash-Display", sans-serif;
 	font-weight: 400;
+	background-color: var(--black-color);
+	color: var(--white-color);
+	padding: 0;
+	margin: 0;
+}
+
+.header__image {
+	width: 100%;
+	height: 200px;
+	object-fit: cover;
+	filter: grayscale(0.9);
+}
+.header__title {
+	color: var(--brand-color);
+	font-size: 66px;
+	text-align: center;
+	font-weight: 500;
+	margin: 0.25em 0;
+}
+.net {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -1;
+}
+.net > div {
+	border-right: 0.25px solid var(--brand-color);
+}
+/* main {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+} */
+.description {
+	max-width: 370px;
+	line-height: 1.2;
+	font-size: 14px;
+	margin-left: 42%;
 }
