--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,13 +82,30 @@ body {
 .net > div {
 	border-right: 0.25px solid var(--brand-color);
 }
-/* main {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-} */
+
 .description {
 	max-width: 370px;
-	line-height: 1.2;
+	line-height: 1.4;
 	font-size: 14px;
-	margin-left: 42%;
+	margin-left: 43%;
+}
+
+@media screen and (max-width: 768px) {
+	.header__image {
+		height: 400px;
+	}
+	.header__title {
+		font-size: 36px;
+		text-align: left;
+		padding: 0 1%;
+		margin-top: 2em;
+	}
+	main {
+		padding: 0 0.5em;
+	}
+	.description {
+		margin-left: 0;
+		padding-left: 4em;
+		margin-bottom: 7em;
+	}
 }
