--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,28 @@ body {
 	margin-left: 43%;
 }
 
+.preloader {
+	width: 100%;
+	height: 100vh;
+	background: black;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	transition: transform 0.75s ease-in-out;
+	overflow: hidden;
+	transform-origin: right center;
+}
+
+.loader {
+	width: 0;
+	height: 100%;
+	background-color: var(--brand-color);
+	transition: all 5s ease-in-out;
+	transform-origin: right center;
+}
+
 @media screen and (max-width: 768px) {
 	.header__image {
 		height: 400px;
