--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,18 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+	.preloader {
+		overflow: hidden;
+		transform-origin: center top;
+	}
+
+	.loader {
+		width: 100%;
+		height: 100%;
+		transform-origin: center bottom;
+		transition: transform 0s ease-in-out;
+		transform: scaleY(0);
+	}
 	.header__image {
 		height: 400px;
 	}
