--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
-	--brand-color: #9b948a;
-	--black-color: #000000;
-	--white-color: #ffffff;
+	--brand-color: #d5eb5d;
+	--black-color: #0e0e0e;
+	--white-color: #f2eaea;
 }
 
 * {
@@ -10,9 +10,11 @@
 
 a {
 	color: var(--white-color);
+	text-decoration-color: var(--brand-color);
 }
 
 a:hover {
+	color: var(--brand-color);
 	text-decoration: none;
 }
 br {
@@ -48,26 +50,26 @@ ul > li:not(:first-child) {
 }
 
 body {
-	font-family: "Clash-Display", sans-serif;
+	font-family: sans-serif;
 	font-weight: 400;
 	background-color: var(--black-color);
 	color: var(--white-color);
-	padding: 0;
+	padding: 2rem;
 	margin: 0;
 }
 
-.header__image {
-	width: 100%;
-	height: 200px;
-	object-fit: cover;
-	filter: grayscale(0.9);
+.header {
+	max-width: 500px;
+	margin: auto;
+	margin-top: 5%;
+	color: var(--brand-color);
+	margin-bottom: 32px;
 }
 .header__title {
 	color: var(--brand-color);
-	font-size: 66px;
-	text-align: center;
-	font-weight: 500;
-	margin: 0.25em 0;
+	font-size: 42px;
+	font-weight: 600;
+	line-height: 0;
 }
 .net {
 	display: grid;
@@ -83,63 +85,15 @@ body {
 	border-right: 0.25px solid var(--brand-color);
 }
 
+.nav {
+	margin-top: 20%;
+}
+
 .description {
-	max-width: 370px;
+	max-width: 500px;
 	line-height: 1.4;
-	font-size: 14px;
-	margin-left: 43%;
-}
-
-.preloader {
-	width: 100%;
-	height: 100vh;
-	background: black;
-	position: fixed;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	transition: transform 0.75s ease-in-out;
-	overflow: hidden;
-	transform-origin: right center;
-}
-
-.loader {
-	width: 0;
-	height: 100%;
-	background-color: var(--brand-color);
-	transition: width 5s ease-in-out, transform 5s ease-in-out;
-	transform-origin: right center;
-}
-
-@media screen and (max-width: 768px) {
-	.preloader {
-		overflow: hidden;
-		transform-origin: center top;
-	}
-
-	.loader {
-		width: 100%;
-		height: 100%;
-		transform-origin: center bottom;
-		transition: transform 0s ease-in-out;
-		transform: scaleY(0);
-	}
-	.header__image {
-		height: 400px;
-	}
-	.header__title {
-		font-size: 36px;
-		text-align: left;
-		padding: 0 1%;
-		margin-top: 2em;
-	}
-	main {
-		padding: 0 0.5em;
-	}
-	.description {
-		margin-left: 0;
-		padding-left: 4em;
-		margin-bottom: 7em;
-	}
+	font-size: 18px;
+	margin: auto;
+	font-family: sans-serif;
+	font-weight: 300;
 }
