--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,6 @@ a:hover {
 	color: var(--brand-color);
 	text-decoration: none;
 }
-br {
-	line-height: 0.5;
-}
 
 ul {
 	list-style-type: none;
@@ -49,6 +46,13 @@ ul > li:not(:first-child) {
 	font-weight: 500;
 }
 
+.hide__pc {
+	display: none;
+}
+
+.hide__mobile {
+	display: inline-block;
+}
 body {
 	font-family: sans-serif;
 	font-weight: 400;
@@ -71,18 +75,8 @@ body {
 	font-weight: 600;
 	line-height: 0;
 }
-.net {
-	display: grid;
-	grid-template-columns: repeat(8, 1fr);
-	width: 100%;
-	height: 100vh;
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: -1;
-}
-.net > div {
-	border-right: 0.25px solid var(--brand-color);
+.header__break {
+	display: none;
 }
 
 .nav {
@@ -92,8 +86,19 @@ body {
 .description {
 	max-width: 500px;
 	line-height: 1.4;
-	font-size: 18px;
 	margin: auto;
 	font-family: sans-serif;
 	font-weight: 300;
+}
+
+@media screen and (max-width: 600px) {
+	.header {
+		margin-top: 30%;
+	}
+	.hide__pc {
+		display: inline-block;
+	}
+	.hide__mobile {
+		display: none;
+	}
 }
