--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,8 @@ body {
 	color: var(--brand-color);
 	font-size: 42px;
 	font-weight: 600;
-	line-height: 0;
+	line-height: 42px;
+	margin-bottom: -8px;
 }
 .header__title a {
 	text-decoration: none;
